--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a name="welcome-to-the-github-page-for-bigdatadialoginfo" class="anchor" href="#welcome-to-the-github-page-for-bigdatadialoginfo"><span class="octicon octicon-link"></span></a>Welcome to the GitHub Page for BigDataDialog.info</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This page is a placeholder.  To learn more about GitHub Pages, read on...</p>
+
+<p>GitHub automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
