Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,38 +28,25 @@
       </header>
       <section>
         <h1>
-<a name="welcome-to-the-github-page-for-bigdatadialoginfo" class="anchor" href="#welcome-to-the-github-page-for-bigdatadialoginfo"><span class="octicon octicon-link"></span></a>Welcome to the GitHub Page for BigDataDialog.info</h1>
+<a name="welcome-to-the-github-data-repository-service-for-bigdatadialoginfo" class="anchor" href="#welcome-to-the-github-data-repository-service-for-bigdatadialoginfo"><span class="octicon octicon-link"></span></a>Welcome to the GitHub Data Repository Service for BigDataDialog.info</h1>
 
-<p>This page is a placeholder.  To learn more about GitHub Pages, read on...</p>
+<h2>
+<a name="bigdatadialog-identity-and-intention" class="anchor" href="#bigdatadialog-identity-and-intention"><span class="octicon octicon-link"></span></a>BigDataDialog Identity and Intention:</h2>
 
-<p>GitHub automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This is the MIT Human Dynamics Lab LegalScience research team's GitHub Repository for the BigDataDialog national discussion on Big Data.  </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<p>The name "BigDataDialog" was selected for two reasons:  The BigDataDialog is inteded to enable and help focus a new type of national discussion that at once uses big data techniques as a <em>means</em> for organizing and wrking with large volumes of input and is also <em>about</em> big data law, policy and practice. </p>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h2>
+<a name="bigdatadialog-purposes-and-processes" class="anchor" href="#bigdatadialog-purposes-and-processes"><span class="octicon octicon-link"></span></a>BigDataDialog Purposes and Processes:</h2>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>These online dialogs include discussion of the questions posed by White House it it's request for information about big data and public policy but are not limited to those question or that RFI process.  The BigDataDialog project aims to provide a forum where virtually limitless numbers of people and organizations can express their points of view and a set of corresponding methods and mechanisms enabling:</p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<ul>
+<li><p><em>Reference to</em> the points of view, by ensuring each contribution exists at a stable URL with key associated services such as RSS and common approaches to identfying the content and facets of meaning underlying the points of view in structured data formats such as JSON; and</p></li>
+<li><p><em>Reflection upon</em> the points of view, by use of online annotation and participatory iteration methods such as those available through GitHub; and</p></li>
+<li><p><em>Refining of</em> the points of view, by use of a live forum programs for <strong>discussion and debate</strong> featuring the Google Hangout video conference tool and the <em>MIT Media Lab Unhangout</em> approach for <strong>scalable collaboration and self-organiing iteration</strong> of points of view <em>about</em> the points of view. </p></li>
+</ul><p>The purpose of this repository is to leverage the capabilities of GitHub to provide reliable and accessible version control or key files of and resulting from the BigDataDialog initiative.  This GitHub repository is intended to enable more and better data-driven apps and services used and in some cases adapted or developed in support of the BigDataDialog processes. </p>
       </section>
     </div>
     <footer>
